Refactor skill evaluation retrieval and update UI for categorized skills display
- Changed the method in SkillService to return a map of skill evaluations grouped by category.
- Updated MySkillsController to utilize the new method and adjusted model attributes accordingly.
- Modified my-skills.html to display skills categorized by their respective categories, enhancing the user interface.
- Added new CSS styles for category sections to improve layout and visual appeal.